# blood-boomerang

./: Cargo.toml  README.md  colors.txt  save.ron
.github/workflows/: release.yaml
assets/: splash_art.aseprite
assets/enemies/: coffin.aseprite  finger.aseprite  hand.aseprite  hit.particles.ron
assets/player/: boomerang_activation.particles.ron
assets/shaders/player/: boomerang.wgsl
src/: audio.rs  autotimer.rs  exp_decay.rs  main.rs
src/characters/: mod.rs  player.rs
src/characters/bullet/: mod.rs
src/characters/enemies/: coffin.rs  ghost.rs  hand.rs  mod.rs
src/characters/player/: mod.rs  shoot.rs
src/effects/: ghost_sprite.rs  mod.rs
src/screens/: after_death.rs  camera_setup.rs  gameplay.rs  mod.rs  splash.rs  tutorial.rs
